Fix z-index on selects

--- a/components/_select.scss
+++ b/components/_select.scss
@@ -34,7 +34,6 @@
 }
 .c-select__control {
   position: relative;
-  z-index: 2;
   background: transparent;
   width: 100%;
   // So that focus glow is correct.
